# scrub-reimplemented

./: .gitignore  README.md  pyproject.toml
unlearning/: scrub.py  scrub_eval.ipynb  scrub_eval.py  utils.py
