[tool.poetry]
name = "scrub-reimplemented"
version = "0.1.0"
description = ""
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
readme = "README.md"

packages = [
	{include = "unlearning"}
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
torch = "^2.2.1"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
torchvision = "^0.17.1"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
pickleshare = "^0.7.5"
seaborn = "^0.13.2"
jupyter-black = "^0.3.4"
opacus = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
